# Simulation

./: pyproject.toml  pytest.ini  requirements.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  create-pull-request.yml
back/: settings.py
back/domain/creatures/: creature.py  herbivore.py  predator.py
back/domain/landscape/: grass.py  rock.py  tree.py
back/entities/: active.py  base.py  entities.py  static.py
back/exceptions/: base.py  logic.py  settings.py
back/map/cell/: base.py
back/tests/entities/: test_entities.py
back/values/: base.py  health.py
simulation/back/: settings.py
simulation/back/domain/creatures/: creature.py  herbivore.py  predator.py
simulation/back/domain/landscape/: entity.py  grass.py  rock.py  tree.py
simulation/back/exceptions/: base.py  logic.py  service.py  settings.py
simulation/back/map/cell/: cell.py
simulation/back/map/map/: base.py  map.py  services.py
simulation/back/services/domain/: direction_builder.py  entity_builder.py  position_generator.py
simulation/tests/entities/: test_entities.py
simulation/tests/services/: test_services.py
