[tool.poetry]
name = "simulation"
version = "0.1.0"
description = ""
authors = ["Alex Kor <dna1133@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
faker = "^25.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

